--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
      </section>
      <p style="color:gray;">Copyright © 2025 Fork and Flame Restaurant, All Rights Reserved</p>
      <div>
-            <a href="www.facebook.com"><img src="C:\Users\USER\Documents\Landing Page\Images\FB.png" style="width: 30px;height: 30px;">
+            <a href="www.facebook.com"><img src="\Images\FB.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.linkedin.com"><img src="C:\Users\USER\Documents\Landing Page\Images\LN.png" style="width: 30px;height: 30px;">
+            <a href="www.linkedin.com"><img src="\Images\LN.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.instagram.com"><img src="C:\Users\USER\Documents\Landing Page\Images\IG.png" style="width: 30px;height: 30px;">
+            <a href="www.instagram.com"><img src="\Images\IG.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.youtube.com"><img src="C:\Users\USER\Documents\Landing Page\Images\youtube.png" style="width: 30px;height: 30px;">
+            <a href="www.youtube.com"><img src="\Images\youtube.png" style="width: 30px;height: 30px;">
             </a>
      </div>
     
