--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
 </head>
 <body style="background-color: whitesmoke;">
-    <img src="Images\Fork.png" width="600" height="300" alt="Fork & Flame Restaurant Logo">
+    <img src="Fork.png" width="600" height="300" alt="Fork & Flame Restaurant Logo">
     <h1>Fork & Flame Restaurant</h1>
     <section>
         <h2>The Art of Flame-Kissed Dining</h2>
@@ -117,13 +117,13 @@
      </section>
      <p style="color:gray;">Copyright © 2025 Fork and Flame Restaurant, All Rights Reserved</p>
      <div>
-            <a href="www.facebook.com"><img src="Images\FB.png" style="width: 30px;height: 30px;">
+            <a href="www.facebook.com"><img src="FB.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.linkedin.com"><img src="Images\LN.png" style="width: 30px;height: 30px;">
+            <a href="www.linkedin.com"><img src="LN.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.instagram.com"><img src="Images\IG.png" style="width: 30px;height: 30px;">
+            <a href="www.instagram.com"><img src="IG.png" style="width: 30px;height: 30px;">
             </a>
-            <a href="www.youtube.com"><img src="Images\youtube.png" style="width: 30px;height: 30px;">
+            <a href="www.youtube.com"><img src="youtube.png" style="width: 30px;height: 30px;">
             </a>
      </div>
     
